@@ -1,4 +1,8 @@
 2004-06-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/result.hxx, src/result.cxx:
+  - Changed garbage collection mechanism to double circular linked lists
+  - Wrapping a PGresult * in a result object is now exception-free!
+2004-06-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx:
   - Wrap PQconsumeInput() and PQisBusy()
  include/pqxx/cursor.hxx:
